--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<h3>Find ME</h3>
+					<h3>Footprints</h3>
 					<p>
 						Find me on
                         <a href="https://github.com/doobeh">Github</a>,
