--- a/templates/blog.html
+++ b/templates/blog.html
@@ -11,31 +11,17 @@
                 {{ render_blog_post(child, from_index=true) }}
                 <hr/>
             {% endfor %}
+
+            {% if this.pagination.pages > 1 %}
+                {{ render_pagination(this.pagination) }}
+            {% endif %}
+
             {% endblock post %}
         </div>
 
-        <!-- === SIDEBAR === -->
-
-        <div class="col-lg-4 sidebar-zone">
-            <h4>SCRIBBLES <i class="icon-chevron-down"></i></h4>
-            <br>
-            <h6>Something Important</h6>
-            <p><a href="#">Something Important</a></p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-            <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-            <br>
-
-            <h6>CATEGORIES</h6>
-            <p>
-                <i class="icon-folder-open-alt"></i> <a href="#">Design</a><br/>
-                <i class="icon-folder-open-alt"></i> <a href="#">Develop</a><br/>
-                <i class="icon-folder-open-alt"></i> <a href="#">Photography</a><br/>
-                <i class="icon-folder-open-alt"></i> <a href="#">Wordpress</a>
-            </p>
-            <br>
-
-        </div><!-- /col-lg-4 -->
+        {% include 'includes/sidebar.html' %}
     </div><!-- /row -->
+
 </div><!-- /container -->
 {% endblock body %}
 
