--- a/templates/macros/class.html
+++ b/templates/macros/class.html
@@ -1,4 +1,4 @@
-{% macro render_blog_post(post, from_index=false) %}
+{% macro render_tutorial_class(post, from_index=false) %}
     <br/>
 {#    <img class="img-responsive" src="https://placehold.it/1680x150" alt="">#}
     <div class="row">
@@ -17,7 +17,7 @@
     </div><!-- /row -->
 
     <div class="col-md-9 col-md-offset-3 blog-post">
-            {{ post.body }}
+            {{ post.content }}
     </div><!-- /col9 -->
 {##}
 {#    <div class="col-md-9 col-md-offset-3 blog-footer">#}
