--- a/templates/class.html
+++ b/templates/class.html
@@ -1,12 +1,12 @@
 {% extends 'layout.html'%}
-{% from "macros/blog.html" import render_blog_post %}
+{% from "macros/class.html" import render_tutorial_class %}
 
 {% block body %}
 <div class="container">
     <div class="row main-blog">
         <div class="col-lg-8">
             {% block post %}
-            {{ render_blog_post(this) }}
+            {{ render_tutorial_class(this) }}
             {% endblock post %}
         </div>
 
