--- a/templates/macros/pagination.html
+++ b/templates/macros/pagination.html
@@ -1,15 +1,19 @@
+
+
 {% macro render_pagination(pagination) %}
-  <div class="pagination">
-    {% if pagination.has_prev %}
-      <a href="{{ pagination.prev|url }}">&laquo; Previous</a>
-    {% else %}
-      <span class="disabled">&laquo; Previous</span>
-    {% endif %}
-    | {{ pagination.page }} |
-    {% if pagination.has_next %}
-      <a href="{{ pagination.next|url }}">Next &raquo;</a>
-    {% else %}
-      <span class="disabled">Next &raquo;</span>
-    {% endif %}
-  </div>
+    <div class="col-md-9 col-md-offset-3 blog-footer centered">
+        <div class="pagination">
+            {% if pagination.has_prev %}
+                <a href="{{ pagination.prev|url }}"><i class="fa fa-caret-left"></i> PREVIOUS</a>
+            {% else %}
+                <span class="disabled">&laquo; Previous</span>
+            {% endif %}
+            |
+            {% if pagination.has_next %}
+                <a href="{{ pagination.next|url }}">Next &raquo;</a>
+            {% else %}
+                <span class="disabled">NEXT <i class="fa fa-caret-right"></i></span>
+            {% endif %}
+        </div>
+    </div>
 {% endmacro %}
