Use `tut` id for better spacing.

--- a/templates/tutorials.html
+++ b/templates/tutorials.html
@@ -3,7 +3,7 @@
 {% from "macros/pagination.html" import render_pagination %}
 
 {% block body %}
-    <div id="w1">
+    <div id="tut">
         <div class="container">
             <br/>
             <div class="col-lg-10 col-lg-offset-1 centered">
