--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -21,9 +21,10 @@
 				</div>
 				<div class="col-lg-8">
 					{{ child.description }}
-                    <a href="{{ child|url }}">View Class</a>
+                    <a class="btn btn-primary btn-xs" href="{{ child|url }}">View Class</a>
 				</div>
 			</div>
+            {% if not loop.last %}<hr/>{% endif %}
             {% endfor %}
 
         </div><!-- /container --></div><!-- w1 -->
