--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -10,22 +10,26 @@
                 <h2>{{ this.title }}</h2>
                 <br />
                 {{ this.description }}
+                {% if this.children.count() == 1 %}
+                    <a class="btn btn-primary btn-xs" href="{{ this.children.first()|url }}">View Class</a>
+                {% endif %}
                 <hr />
             </div>
-
-            {% for child in this.children %}
-			<div class="row">
-				<div class="col-lg-2 col-lg-offset-1">
-					<h3>{{ child.title }}</h3>
-					<p>{{ child.type }}</p>
-				</div>
-				<div class="col-lg-8">
-					{{ child.description }}
-                    <a class="btn btn-primary btn-xs" href="{{ child|url }}">View Class</a>
-				</div>
-			</div>
-            {% if not loop.last %}<hr/>{% endif %}
-            {% endfor %}
+            {% if this.children.count() > 1 %}
+                {% for child in this.children %}
+                <div class="row">
+                    <div class="col-lg-2 col-lg-offset-1">
+                        <h3>{{ child.title }}</h3>
+                        <p>{{ child.type }}</p>
+                    </div>
+                    <div class="col-lg-8">
+                        {{ child.description }}
+                        <a class="btn btn-primary btn-xs" href="{{ child|url }}">View Class</a>
+                    </div>
+                </div>
+                {% if not loop.last %}<hr/>{% endif %}
+                {% endfor %}
+            {% endif %}
 
         </div><!-- /container --></div><!-- w1 -->
 {% endblock body %}
