Content and Formatting.

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,23 +1,17 @@
-<!-- Footer Wrap -->
-	<div id="f">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<h3>Footprints</h3>
-					<p>
-						Find me on
-                        <a href="https://github.com/doobeh">Github</a>,
-                        <a href="https://twitter.com/ergoio">Twitter</a>,
-                        or wandering around the island of
-                        Providenciales in the Turks and Caicos.<br/>
-					</p>
-				</div>
-{#				<div class="col-lg-4">#}
-{#					<h3>Newsletter</h3>#}
-{#					<p>Each month we collect the best stuff around the design world and share it with you.</p>#}
-{#					<button type="button" class="btn btn-theme">SUBSCRIBE</button>#}
-{#				</div>#}
 
-			</div><!-- /row -->
-		</div><!-- /container -->
-	</div><!-- /Footer wrap -->
+<div id="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <h3>Footprints</h3>
+                <p>
+                    Find me on
+                    <a href="https://github.com/doobeh">Github</a>,
+                    <a href="https://twitter.com/ergoio">Twitter</a>,
+                    or wandering around the island of
+                    Providenciales in the Turks and Caicos.<br/>
+                </p>
+            </div>
+        </div><!-- /row -->
+    </div><!-- /container -->
+</div>
