--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    {#    <script src="https://use.typekit.net/bwo8wil.js"></script>#}
+    {#    <script>try{Typekit.load({ async: true });}catch(e){}</script>#}
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ergo Redux">
     <meta name="author" content="Anthony Plunkett">
     {#<link rel="shortcut icon" href="assets/ico/favicon.png">#}
 
-    <title>Ergo Redux</title>
+    <title>Ergo</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -61,189 +64,8 @@
     </div>
 
     {% block body %}
-    <div id="headerwrap">
-		<div class="container">
-			<div class="col-lg-7">
-				<h1>Ergo &mdash; Redux</h1>
-			</div><!-- /col-lg-7 -->
-		</div><!-- /container -->
-    </div> <!-- /headerwrap -->
-
-
-
-
-
-	<!-- Dark Blue Wrap / Action Call -->
-	<div id="db">
-		<div class="container centered">
-			<h2>Create something really beautiful with this theme. Enjoy the possibilities.</h2>
-			<br>
-			<button type="button" class="btn btn-theme">SHOW MORE</button>
-		</div><!-- /container -->
-	</div><!-- /Dark Blue wrap -->
-
-
-	<!-- White Wrap - Version 1 -->
-	<div id="w1">
-		<div class="container centered">
-			<h2>The best customer support, it comes totally free.</h2>
-			<br>
-			<p>Our quick-response customer support helps you solve your problems fast. Everyone on our team is an experienced Bootstrap Developer.
-We truly care about our users and our end product. Our users love Smart, and you will too with our incredible support.</p>
-			<br>
-			<div class="col-lg-10 col-lg-offset-1">
-				<img class="img-responsive" src="http://lorempixel.com/1000/200">
-			</div>
-		</div><!-- /container -->
-	</div><!-- /White Wrap Ver. 1 -->
-
-
-	<!-- Dark Blue Wrap - Clients Logos -->
-	<div id="db">
-		<div class="container">
-			<div class="col-lg-12 centered">
-				<h2>Some brands working with us.</h2>
-				<p>The most important brands trust in our work. We create exclusive partnerships to endorse their work and beliefs. We truly care about our clients and their needs. That's why their choose us to work with them.</p>
-			</div><!-- /col-lg-12 -->
-			<div class="row">
-				<div class="col-lg-2 col-lg-offset-2">
-					<a href="#" data-toggle="tooltip" title="Client Name"><img class="img-responsive" src="https://placehold.it/350x150"></a>
-				</div><!-- /col -->
-				<div class="col-lg-2">
-					<a href="#" data-toggle="tooltip" title="Client Name"><img class="img-responsive" src="https://placehold.it/350x150"></a>
-				</div><!-- /col -->
-				<div class="col-lg-2">
-					<a href="#" data-toggle="tooltip" title="Client Name"><img class="img-responsive" src="https://placehold.it/350x150"></a>
-				</div><!-- /col -->
-				<div class="col-lg-2">
-					<a href="#" data-toggle="tooltip" title="Client Name"><img class="img-responsive" src="https://placehold.it/350x150"></a>
-				</div><!-- /col -->
-			</div><!-- /row -->
-			<div class="row">
-				<div class="col-lg-2 col-lg-offset-2">
-					<a href="#" data-toggle="tooltip" title="Client Name"><img class="img-responsive" src="https://placehold.it/350x150" alt=""></a>
-				</div><!-- /col -->
-				<div class="col-lg-2">
-					<a href="#" data-toggle="tooltip" title="Client Name"><img class="img-responsive" src="https://placehold.it/350x150" alt=""></a>
-				</div><!-- /col -->
-				<div class="col-lg-2">
-					<a href="#" data-toggle="tooltip" title="Client Name"><img class="img-responsive" src="https://placehold.it/350x150" alt=""></a>
-				</div><!-- /col -->
-				<div class="col-lg-2">
-					<a href="#" data-toggle="tooltip" title="Client Name"><img class="img-responsive" src="https://placehold.it/350x150" alt=""></a>
-				</div><!-- /col -->
-			</div><!-- /row -->
-		</div><!-- /container -->
-	</div><!-- /Dark Blue Wrap - Clients Logo -->
-
-
-	<!-- White Wrap Version 2 - Portfolio Projects -->
-	<div id="w2">
-		<div class="container">
-			<div class="row centered">
-				<h2>Show your work with style. Let others appreciate it.</h2>
-				<p>Put the best pieces of your work here. Show your talent & inspire others to work with you. Be the agency or freelancer that they are waiting for.</p>
-				<br>
-				<!-- PORTFOLIO IMAGE 1 -->
-				<div class="col-lg-3 ">
-			    	<div class="grid mask">
-						<figure>
-							<a data-toggle="modal" href="#myModal"><img class="img-responsive" src="https://placehold.it/350x150" alt=""></a>
-							<figcaption>
-								<h5>WEBSITE</h5>
-								<a data-toggle="modal" href="#myModal" class="btn btn-theme btn-lg">Show Me</a>
-							</figcaption><!-- /figcaption -->
-						</figure><!-- /figure -->
-			    	</div><!-- /grid-mask -->
-			    	<h4>New Website</h4>
-				</div><!-- /col -->
-
-				<!-- PORTFOLIO IMAGE 4 -->
-				<div class="col-lg-3 ">
-			    	<div class="grid mask">
-						<figure>
-							<a data-toggle="modal" href="#myModal"><img class="img-responsive" src="https://placehold.it/350x150" alt=""></a>
-							<figcaption>
-								<h5>UI/UX</h5>
-								<a data-toggle="modal" href="#myModal" class="btn btn-theme btn-lg">Show Me</a>
-							</figcaption><!-- /figcaption -->
-						</figure><!-- /figure -->
-			    	</div><!-- /grid-mask -->
-			    	<h4>User Interface</h4>
-				</div><!-- /col -->
-
-				<!-- PORTFOLIO IMAGE 1 -->
-				<div class="col-lg-3 ">
-			    	<div class="grid mask">
-						<figure>
-							<a data-toggle="modal" href="#myModal"><img class="img-responsive" src="https://placehold.it/350x150" alt=""></a>
-							<figcaption>
-								<h5>TWITTER</h5>
-								<a data-toggle="modal" href="#myModal" class="btn btn-theme btn-lg">Show Me</a>
-							</figcaption><!-- /figcaption -->
-						</figure><!-- /figure -->
-			    	</div><!-- /grid-mask -->
-			    	<h4>Twitter Widget</h4>
-				</div><!-- /col -->
-
-				<!-- PORTFOLIO IMAGE 1 -->
-				<div class="col-lg-3 ">
-			    	<div class="grid mask">
-						<figure>
-							<a data-toggle="modal" href="#myModal"><img class="img-responsive" src="https://placehold.it/350x150" alt=""></a>
-							<figcaption>
-								<h5>MOBILE</h5>
-								<a data-toggle="modal" href="#myModal" class="btn btn-theme btn-lg">Show Me</a>
-							</figcaption><!-- /figcaption -->
-						</figure><!-- /figure -->
-			    	</div><!-- /grid-mask -->
-			    	<h4>Mobile Site</h4>
-				</div><!-- /col -->
-
-
-
-						 <!-- MODAL SHOW THE PORTFOLIO IMAGE. In this demo, all links point to this modal. You should create
-						      a modal for each of your projects. -->
-
-						  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-						    <div class="modal-dialog">
-						      <div class="modal-content">
-						        <div class="modal-header">
-						          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-						          <h4 class="modal-title">Project Title</h4>
-						        </div>
-						        <div class="modal-body">
-						          <p><img class="img-responsive" src="https://placehold.it/350x150" alt=""></p>
-						          <p>This project was crafted for Some Name corp. Detail here a little about your job requirements and the tools used. Tell about the challenges faced and what you and your team did to solve it.</p>
-						          <p><b><a href="#">Visit Site</a></b></p>
-						        </div>
-						        <div class="modal-footer">
-						          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-						        </div>
-						      </div><!-- /.modal-content -->
-						    </div><!-- /.modal-dialog -->
-						  </div><!-- /.modal -->
-
-			</div><!-- /row -->
-		</div><!-- /container -->
-	</div><!-- /White Wrap Version 2 - Portfolio -->
-
-
-
     {% endblock body %}
-
-
-
     {% include 'includes/footer.html' %}
-
-{#	<div id="c">#}
-{#		<div class="container">#}
-{#			<div class="pull-right">#}
-{#			<p>Crafted with <i class="fa fa-heart"></i> by Anthony Plunkett</p>#}
-{#			</div>#}
-{#		</div>#}
-{#	</div>#}
-
 
 
     <!-- Bootstrap core JavaScript
@@ -252,14 +74,6 @@ We truly care about our users and our end product. Our users love Smart, and you
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script>
-    $(function () { $("[data-toggle='tooltip']").tooltip(); });
-    </script>
-	<script>
-	$('.carousel').carousel({
-	  interval: 3500
-	})
-	</script>
 
   </body>
 </html>
