--- a/assets/static/css/site.css
+++ b/assets/static/css/site.css
@@ -1,60 +1,56 @@
 body {
     background-color: #f2f2f2;
-    font-family: Lato;
-    font-weight: 300;
+    font-family: "Lato", sans-serif;
+    font-weight: 100;
     font-size: 16px;
     color: #000000;
     -webkit-font-smoothing: antialiased;
-    -webkit-overflow-scrolling: touch
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: Raleway;
-    font-weight: 300;
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
     color: #333
 }
 
+h1, h2 {
+    font-size: 1.6em;
+}
 p {
     line-height: 28px;
     margin-bottom: 25px
+}
+
+.left {
+    text-align: left
+}
+
+.right {
+    text-align: right
 }
 
 .centered {
     text-align: center
 }
 
-.goleft {
-    text-align: left
-}
 
-.goright {
-    text-align: right
-}
 
 a {
-    color: #00072f;
+    color: #ba5535;
     word-wrap: break-word;
-    -webkit-transition: color .1s ease-in, background .1s ease-in;
-    -moz-transition: color .1s ease-in, background .1s ease-in;
-    -ms-transition: color .1s ease-in, background .1s ease-in;
-    -o-transition: color .1s ease-in, background .1s ease-in;
-    transition: color .1s ease-in, background .1s ease-in
+    transition: color .2s ease-in, background .1s ease-in;
 }
 
-
-
 a:hover, a:focus {
-    color: rgba(12, 12, 24, 0.82);
+    color: rgba(12, 12, 24, 0.9);
     text-decoration: none;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
     outline: 0
 }
 
-a:before, a:after {
-    -webkit-transition: color .1s ease-in, background .1s ease-in;
-    -moz-transition: color .1s ease-in, background .1s ease-in;
-    -ms-transition: color .1s ease-in, background .1s ease-in;
-    -o-transition: color .1s ease-in, background .1s ease-in;
-    transition: color .1s ease-in, background .1s ease-in
+
+.disabled {
+    color: rgba(0, 0, 0, 0.2);
 }
 
 hr {
@@ -68,211 +64,28 @@ hr {
 
 .btn {
     border-radius: 0;
-    font-family: Lato, sans-serif;
-    font-size: 18px;
-    font-weight: 100
+    font-family: "Raleway", sans-serif;
+    font-weight: 400
 }
 
-.btn-theme {
-    color: #fff;
-    background-color: transparent;
-    border-color: #fff;
-    padding-right: 10px;
-    padding-left: 10px
-}
 
-.btn-theme:hover {
-    color: #2f2f2f;
-    background-color: #fff
-}
-
-.modal-header {
-    background: #1abc9c
-}
-
-.modal-header h4 {
-    color: #fff
-}
-
-.modal-footer {
-    background: #2b2b2b
-}
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: #fff;
-    background-color: #2c3e50
+    background-color: #0d0d25
 }
 
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
     color: #fff;
     text-decoration: none;
-    background-color: #2c3e50
+    background-color: #0d0d25
 }
 
 .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
     color: #fff;
     text-decoration: none;
-    background-color: #2c3e50;
+    background-color: #0d0d25;
     outline: 0
-}
-
-.form-control {
-    border-radius: 0;
-    padding: 10px 18px;
-    font-size: 18px;
-    font-family: Lato, sans-serif;
-    color: #2f2f2f;
-    font-weight: 100
-}
-
-input {
-    padding: 10px 18px
-}
-
-label {
-    font-weight: 500;
-    font-family: Raleway, sans-serif
-}
-
-input[type=submit] {
-    border: 0
-}
-
-#headerwrap {
-    background: url(https://placehold.it/1680x1024) no-repeat center top;
-    margin-top: 50px;
-    padding-top: 20px;
-    background-attachment: relative;
-    background-position: center center;
-    min-height: 300px;
-    width: 100%;
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover
-}
-
-#headerwrap h1 {
-    margin-top: 70px;
-    color: #fff;
-    font-size: 55px;
-    font-weight: 100;
-    letter-spacing: 2px;
-    text-align: left
-}
-
-#headerwrap2 {
-    background: url(../img/header-bg2.jpg) no-repeat center top;
-    margin-top: 50px;
-    padding-top: 20px;
-    background-attachment: relative;
-    background-position: center center;
-    min-height: 500px;
-    width: 100%;
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover
-}
-
-#headerwrap2 h1 {
-    margin-top: 150px;
-    color: #fff;
-    font-size: 55px;
-    font-weight: 100;
-    letter-spacing: 2px
-}
-
-#about {
-    background: url(../img/about-bg.jpg) no-repeat center top;
-    padding-top: 20px;
-    background-attachment: relative;
-    background-position: center center;
-    min-height: 450px;
-    width: 100%;
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover
-}
-
-#about h1 {
-    margin-top: 150px;
-    color: #fff;
-    font-size: 55px;
-    font-weight: 100;
-    letter-spacing: 2px
-}
-
-#services {
-    background: url(../img/services-bg.jpg) no-repeat center top;
-    padding-top: 20px;
-    background-attachment: relative;
-    background-position: center center;
-    min-height: 450px;
-    width: 100%;
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover
-}
-
-#y {
-    background: #f1c40f;
-    padding-top: 50px;
-    padding-bottom: 50px
-}
-
-#y .glyphicon {
-    font-size: 60px;
-    color: #fff
-}
-
-#y h3 {
-    color: #fff
-}
-
-#y p {
-    font-weight: 500
-}
-
-#db {
-    background: #2c3e50;
-    padding-top: 50px;
-    padding-bottom: 50px
-}
-
-#db h2 {
-    color: #fff
-}
-
-#db h3 {
-    color: #fff
-}
-
-#db p {
-    color: #fff
-}
-
-#db .col-lg-2 {
-    padding-left: 0;
-    padding-right: 0
 }
 
 /* Tutorial */
@@ -301,107 +114,73 @@ input[type=submit] {
 
 /* End Tutorial */
 
-#w1 {
+body {
     background: #fff;
     padding-top: 50px;
     padding-bottom: 0
 }
 
-#w1 i {
-    font-size: 70px;
-    color: #2f2f2f;
-    padding-bottom: 30px;
-    padding-left: 23px;
-    padding-right: 23px
-}
 
-#w1 i:hover {
+i:hover {
     color: #f1c40f
 }
-
-#w1 h1 {
-    font-size: 90px
-}
-
-#w2 {
-    background: #fff;
-    padding-top: 50px;
-    padding-bottom: 50px
-}
-
-#w2 i {
-    font-size: 70px;
-    color: #2f2f2f;
-    padding-bottom: 30px
-}
-
-#w2 i:hover {
-    color: #f1c40f
-}
-
-#f {
-    background: #2c3e50;
-    padding-top: 20px;
-    padding-bottom: 20px
-}
-
-
-
 
 
 /* A Band of Colour */
 
-.ab {
+.band-dark {
     background: #374a5c;
     padding-top: 10px;
-    padding-bottom: 0px
+    padding-bottom: 50px
 }
 
-.ab a {
+.band-dark a {
     color: #fff;
 }
 
-.ab p {
+.band-dark p {
     color: #fff;
 }
 
-.ab h3 {
+.band-dark h3 {
     color: #fff;
 }
 
+/* Add a nm class if you want to get rid of a default padding */
+.nm {
+   padding-bottom: 0 !important;
+}
+
+.band-bright {
+    background: #f17b40;
+    padding-top: 50px;
+    padding-bottom: 50px
+}
+
+.band-bright h3 {
+    color: #fff
+}
+
+.band-bright p {
+    font-weight: 500
+}
 
 /* Footer */
 
-#f a {
+#footer a {
     color: #ffffff;
     font-weight: bold;
 }
 
-#f h3 {
+#footer h3 {
     color: #fff
 }
 
-#f p {
+#footer p {
     color: #fff
 }
 
-#map {
-    width: 100%
-}
 
-#c {
-    background: #2f2f2f;
-    padding-top: 15px
-}
-
-#c p {
-    color: #fff;
-    font-size: 14px
-}
-
-.main-blog {
-    padding-top: 90px
-}
 
 .blog-date {
     display: block;
@@ -429,9 +208,8 @@ input[type=submit] {
 
 .blog-title h2 {
     margin-top: 0;
-    font-size: 40px;
-    line-height: 50px;
-    letter-spacing: 3px;
+    font-size: 24px;
+    line-height: 30px;
     text-align: left;
     font-weight: 400;
     margin-left: 5px
@@ -457,8 +235,8 @@ input[type=submit] {
 
 .blog-post em {
     text-align: left;
-    font-size: 22px;
-    color: #767676
+    font-size: 18px;
+    color: #11124c
 }
 
 .blog-post i {
@@ -472,15 +250,9 @@ input[type=submit] {
 .blog-post blockquote {
     padding: 0 0 0 15px;
     margin: 0 0 20px;
-    border-left: 4px solid #f1c40f;
-    color: #a7a7a7;
+    border-left: 4px solid #f1954b;
+    color: #595959;
     font-size: 19px
-}
-
-.blog-post tag {
-    color: #a7a7a7;
-    font-size: 14px;
-    letter-spacing: 2px
 }
 
 .blog-post h4 {
@@ -492,257 +264,46 @@ input[type=submit] {
     font-weight: 700
 }
 
-.sidebar-zone {
+.sidebar {
     padding-top: 40px;
     padding-bottom: 120px;
     margin-bottom: 0
 }
 
-.sidebar-zone i {
-    vertical-align: middle
+.sidebar i {
+    vertical-align: middle;
+    margin-bottom: 4px;
+    padding-right: 4px;
 }
 
-.sidebar-zone h4 {
+.sidebar h4 {
     font-weight: 500
 }
 
-.sidebar-zone p {
+.sidebar p {
     font-size: 14px
 }
 
-.sidebar-zone h6 {
+.sidebar h6 {
     font-weight: 700
 }
 
-.popular-posts {
-    margin: 0;
-    padding-left: 0
-}
 
-.popular-posts li {
-    list-style: none;
-    margin-bottom: 20px;
-    min-height: 70px
-}
-
-.popular-posts li a, .popular-posts li a:hover {
-    color: #2f2f2f;
-    text-decoration: none
-}
-
-.popular-posts li img {
-    float: left;
-    margin-right: 20px
-}
-
-.popular-posts li em {
-    font-family: Raleway, sans-serif;
-    font-size: 12px
-}
-
-p > tag {
-    color: #b1b1b1;
-    font-size: 12px;
-    font-weight: 500
-}
-
-.grid figure {
-    margin: 0;
-    position: relative
-}
-
-.grid figure img {
-    width: 100%;
-    display: block;
-    position: relative
-}
-
-.grid figcaption {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 20px;
-    color: #fff;
-    background: #2c3e50;
-    font-weight: 700
-}
-
-.grid figcaption h5 {
-    margin: 0;
-    padding-top: 0;
-    padding-left: 10px;
-    padding-bottom: 5px;
-    color: #fff;
-    text-align: left;
-    letter-spacing: 1px
-}
-
-.grid figcaption a {
-    text-align: left;
-    padding: 5px 10px;
-    margin-left: 20px;
-    display: inline-block;
-    background: transparent;
-    color: #fff;
-    font-size: 13px;
-    font-weight: 700
-}
-
-.mask figure {
-    overflow: hidden
-}
-
-.mask figure img {
-    -webkit-transition: -webkit-transform .4s;
-    -moz-transition: -moz-transform .4s;
-    transition: transform .4s
-}
-
-.no-touch .mask figure:hover img, .mask figure.cs-hover img {
-    -webkit-transform: translateY(-30px);
-    -moz-transform: translateY(-30px);
-    -ms-transform: translateY(-30px);
-    transform: translateY(-30px)
-}
-
-.mask figcaption {
-    height: 50px;
-    width: 100%;
-    top: auto;
-    bottom: 0;
-    opacity: 0;
-    -webkit-transform: translateY(100%);
-    -moz-transform: translateY(100%);
-    -ms-transform: translateY(100%);
-    transform: translateY(100%);
-    -webkit-transition: -webkit-transform .4s, opacity .1s .3s;
-    -moz-transition: -moz-transform .4s, opacity .1s .3s;
-    transition: transform .4s, opacity .1s .3s
-}
-
-.no-touch .mask figure:hover figcaption, .mask figure.cs-hover figcaption {
-    opacity: 1;
-    -webkit-transform: translateY(0px);
-    -moz-transform: translateY(0px);
-    -ms-transform: translateY(0px);
-    transform: translateY(0px);
-    -webkit-transition: -webkit-transform .4s, opacity .1s;
-    -moz-transition: -moz-transform .4s, opacity .1s;
-    transition: transform .4s, opacity .1s
-}
-
-.mask figcaption a {
-    position: absolute;
-    top: 10px;
-    bottom: 10px;
-    right: 30px
-}
-
-.pricing-option {
-    padding-bottom: 40px
-}
-
-.pricing-option .pricing-top {
-    position: relative;
-    background: #222;
-    color: #fff;
-    text-align: center;
-    font-weight: 700;
-    padding: 40px 20px 30px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box
-}
-
-.pricing-option .pricing-top .special-label {
-    display: block;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #f1c40f;
-    text-transform: uppercase;
-    font-size: 15px;
-    font-weight: 700;
-    padding: 3px 0
-}
-
-.special .pricing-top {
-    background: #000
-}
-
-.pricing-option .pricing-edition {
-    text-transform: uppercase;
-    display: block;
-    font-size: 25px;
-    letter-spacing: 8px
-}
-
-.pricing-option .price {
-    display: inline-block;
-    position: relative
-}
-
-.pricing-option .price sup {
-    position: absolute;
-    top: 50px;
-    left: -10px;
-    font-size: 24px
-}
-
-.pricing-option .price .price-amount {
-    font-size: 108px;
-    letter-spacing: -4px
-}
-
-.pricing-option .price small {
-    position: relative;
-    left: -10px;
-    font-size: 18px
-}
-
-.pricing-option ul {
-    list-style: none;
-    margin: 0;
-    background: #eee;
-    text-align: center;
-    padding-left: 0
-}
-
-.pricing-option ul li {
-    border-bottom: solid 1px #e1e1e1;
-    padding-top: 20px;
-    padding-bottom: 20px
-}
-
-.pricing-option .pricing-signup {
-    display: block;
-    text-align: center;
-    font-size: 18px;
-    font-weight: 700;
-    padding: 15px 10px;
-    color: #fff;
-    background: #f1c40f
-}
-
-.pricing-option .pricing-signup:hover {
-    background: #f39c12
-}
 
 @media screen and (max-width: 400px) {
-    #db .col-lg-2 {
+    #dark-band .col-lg-2 {
         padding-left: 20%
     }
 }
 
 @media screen and (min-width: 401px) and (max-width: 700px) {
-    #db .col-lg-2 {
+    #dark-band .col-lg-2 {
         padding-left: 30%
     }
 }
 
 @media screen and (min-width: 700px) and (max-width: 1100px) {
-    #db .col-lg-2 {
+    #dark-band .col-lg-2 {
         padding-left: 30%
     }
 }
