--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -1,6 +1,6 @@
 <!-- === SIDEBAR === -->
 
-        <div class="col-lg-4 sidebar-zone">
+        <div class="col-lg-4 sidebar">
             <h4>SCRIBBLES <i class="icon-chevron-down"></i></h4>
 
                 {% for scribble in site.query('/scribbles') %}
@@ -10,10 +10,7 @@
 
             <h6>CATEGORIES</h6>
             <p>
-                <i class="icon-folder-open-alt"></i> <a href="#">Design</a><br/>
-                <i class="icon-folder-open-alt"></i> <a href="#">Develop</a><br/>
-                <i class="icon-folder-open-alt"></i> <a href="#">Photography</a><br/>
-                <i class="icon-folder-open-alt"></i> <a href="#">Wordpress</a>
+                <i class="fa fa-cog"></i> WIP<br/>
             </p>
             <br>
 
