--- a/templates/page.html
+++ b/templates/page.html
@@ -2,20 +2,19 @@
 {% from 'macros/wrap.html' import render_wrap %}
 {% block title %}{{ this.title }}{% endblock %}
 {% block body %}
-    <div id="w1">
-		<div class="container">
-			<br>
-			<div class="col-lg-10 col-lg-offset-1 centered">
-				<h2>{{ this.title }}</h2>
-				<br>
-				<hr>
-                {{ this.body }}
-			</div>
-		</div><!-- /container -->
-    </div> <!-- /White Wrap 1 / Intro -->
+
+    <div class="container">
+        <br>
+        <div class="col-lg-10 col-lg-offset-1 centered">
+            <h2>{{ this.title }}</h2>
+            <br>
+            <hr>
+            {{ this.body }}
+        </div>
+    </div><!-- /container -->
 
     <!-- Footer Wrap -->
-	<div class="ab">
+	<div class="band-dark nm">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-4">
@@ -42,11 +41,6 @@
                         {% endfor %}
 					</p>
 				</div>
-{#				<div class="col-lg-4">#}
-{#					<h3>Newsletter</h3>#}
-{#					<p>Each month we collect the best stuff around the design world and share it with you.</p>#}
-{#					<button type="button" class="btn btn-theme">SUBSCRIBE</button>#}
-{#				</div>#}
 
 			</div><!-- /row -->
 		</div><!-- /container -->
