--- a/templates/tutorials.html
+++ b/templates/tutorials.html
@@ -28,6 +28,7 @@
 
 				</div>
 			</div>
+                {% if not loop.last %}<hr />{% endif %}
             {% endfor %}
         </div><!-- /container -->
 {% endblock body %}
